@@ -6,31 +6,28 @@ import discord4j.core.event.domain.message.MessageCreateEvent;
 import discord4j.core.object.command.ApplicationCommandInteraction;
 import discord4j.core.object.command.ApplicationCommandInteractionOption;
 import discord4j.core.object.command.ApplicationCommandInteractionOptionValue;
-import discord4j.core.object.entity.Guild;
 import discord4j.core.object.entity.Member;
 import discord4j.core.object.entity.Message;
 import discord4j.core.object.entity.channel.TextChannel;
-import discord4j.rest.util.ApplicationCommandOptionType;
 import gg.discord.tj.bot.repository.StatisticsRepository;
 import lombok.extern.slf4j.Slf4j;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.core.publisher.SynchronousSink;
 
 import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Slf4j
 public final class StatisticsService
 {
     private final StatisticsRepository repository = StatisticsRepository.INSTANCE;
-    private static final Pattern HELP_CHANNEL_NAME_PATTERN = Pattern.compile("help|review");
+    private final static Pattern HELP_CHANNEL_NAME_PATTERN = Pattern.compile("help|review");
+    private final static String TAG_FREE_MESSAGE_PATTERN = "^(?![?>]tag free).*$";
 
     public void init()
     {
@@ -43,38 +40,35 @@ public final class StatisticsService
         }
     }
 
-    public int save(MessageCreateEvent e)
+    public Mono<Integer> save(MessageCreateEvent event)
     {
-        int rowCount = 0;
-        Optional<Snowflake> guildId = e.getGuildId();
-        Message message = e.getMessage();
-        Optional<Member> member = e.getMember();
-
-        if (member.isPresent() &&
-            !member.get().isBot() &&
-            guildId.isPresent() &&
-            message.getContent().matches("^(?![?>]tag free).*$") &&
-            HELP_CHANNEL_NAME_PATTERN.matcher(((TextChannel) message.getChannel().block()).getName()).find()
-        )
-        {
-            try
-            {
-                rowCount = repository.save(guildId.get().asLong(), member.get().getId().asLong());
-
-                log.debug("{} message event saved for [GUILD={}, USER={}]", rowCount, guildId.get().asLong(), member.get().getId().asLong());
-            } catch (SQLException throwables)
-            {
-                log.error(throwables.getMessage(), throwables);
-            }
-        }
-        return rowCount;
+        Optional<Snowflake> guildId = event.getGuildId();
+        Message message = event.getMessage();
+        Optional<Member> member = event.getMember();
+        return message.getChannel()
+            .handle((channel, sink) -> {
+                if (guildId.isPresent() &&
+                    member.isPresent() &&
+                    !member.get().isBot() &&
+                    message.getContent().matches(TAG_FREE_MESSAGE_PATTERN) &&
+                    HELP_CHANNEL_NAME_PATTERN.matcher(((TextChannel) channel).getName()).find()) {
+                    try {
+                        int rowCount = repository.save(guildId.get().asLong(), member.get().getId().asLong());
+                        log.debug("{} message event saved for [GUILD={}, USER={}]", rowCount, guildId.get().asLong(), member.get().getId().asLong());
+                        sink.next(rowCount);
+                    } catch (SQLException throwables) {
+                        log.error(throwables.getMessage(), throwables);
+                        sink.error(throwables);
+                    }
+                } else {
+                    sink.next(0);
+                }
+            });
     }
 
-    public Mono<List<List<String>>> topNHelpers(InteractionCreateEvent e)
+    public Mono<List<List<String>>> topNHelpers(InteractionCreateEvent event)
     {
-        ApplicationCommandInteraction commandInteraction = e.getInteraction().getCommandInteraction().orElseThrow();
-
-        Guild guild = e.getInteraction().getGuild().block();
+        ApplicationCommandInteraction commandInteraction = event.getInteraction().getCommandInteraction().orElseThrow();
         Optional<ApplicationCommandInteractionOption> limitOption = commandInteraction.getOption("limit");
 
         int limit = 10;
@@ -87,24 +81,16 @@ public final class StatisticsService
 
         limit = Math.min(limit, 20);
 
-        Function<List<List<Long>>, List<List<String>>> enhanceDataFrame = df -> {
-            List<List<String>> collect = df.stream()
-                .map(row -> {
-                        String tag = null;
-
-                        try {
-                            tag = guild.getMemberById(Snowflake.of(row.get(1))).block().getTag();
-                        } catch (Throwable ignored) {
-                        }
-
-                        return Arrays.asList(String.valueOf(row.get(0)), tag, String.valueOf(row.get(2)));
-                    }
-                ).filter(l -> l.get(1) != null).collect(Collectors.toList());
-            return collect;
-        };
+        Function<List<List<Long>>, Flux<List<String>>> enhanceDataFrame = df -> Flux.concat(df.stream()
+            .map(row ->
+                event.getInteraction().getGuild()
+                    .flatMap(guild -> guild.getMemberById(Snowflake.of(row.get(1))))
+                    .map(member -> member == null ? "[UNKNOWN MEMBER]" : member.getTag())
+                    .map(username -> List.of(String.valueOf(row.get(0)), username, String.valueOf(row.get(2))))
+            ).toList());
 
         int finalLimit = limit;
-        return e.getInteraction().getGuild()
+        return event.getInteraction().getGuild()
             .map(guild1 -> guild1.getId().asLong())
             .handle((BiConsumer<Long, SynchronousSink<List<List<Long>>>>) (guildId, sink) -> {
                 try {
@@ -115,6 +101,7 @@ public final class StatisticsService
                 } catch (SQLException throwables) {
                     sink.error(throwables);
                 }
-            }).map(enhanceDataFrame::apply);
+            }).map(enhanceDataFrame)
+            .flatMap(Flux::collectList);
     }
 }
